--- a/index.html
+++ b/index.html
@@ -376,73 +376,85 @@
         <!-- Testimonial End -->
 
 
-        <!-- Team Start -->
-        <div class="container-xxl py-5">
-            <div class="container px-lg-5">
-                <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="position-relative d-inline text-primary ps-4">Our Team</h6>
-                    <h2 class="mt-2">Meet Our Team Members</h2>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="team-item">
-                            <div class="d-flex">
-                                <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5" style="width: 75px;">
-                                    <a class="btn btn-square text-primary bg-white my-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square text-primary bg-white my-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square text-primary bg-white my-1" href=""><i class="fab fa-instagram"></i></a>
-                                    <a class="btn btn-square text-primary bg-white my-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                                </div>
-                            </div>
+<!-- Team Start -->
+<div class="container-xxl py-5">
+    <div class="container px-lg-5">
+        <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp"
+            data-wow-delay="0.1s">
+            <h6 class="position-relative d-inline text-primary ps-4">Our Team</h6>
+            <h2 class="mt-2">Meet Our Team Members</h2>
+        </div>
+        <div class="row g-4">
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="team-item">
+                    <div class="d-flex">
+                        <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
+                            style="width: 75px;">
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-twitter"></i></a>
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-instagram"></i></a>
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-linkedin-in"></i></a>
                         </div>
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                            <div class="team-item">
-                                <div class="d-flex">
-                                    <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
-                                        style="width: 75px;">
-                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                                class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                                class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                                class="fab fa-instagram"></i></a>
-                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                                class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                    <img class="img-fluid rounded w-100" src="img/team-2.jpg" alt="">
-                                </div>
-                                <div class="px-4 py-3">
-                                    <h5 class="fw-bold m-0">Emma William</h5>
-                                    <small>Manager</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <div class="team-item">
-                                <div class="d-flex">
-                                    <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
-                                        style="width: 75px;">
-                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                                class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                                class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                                class="fab fa-instagram"></i></a>
-                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                                class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                    <img class="img-fluid rounded w-100" src="img/team-3.jpg" alt="">
-                                </div>
-                                <div class="px-4 py-3">
-                                    <h5 class="fw-bold m-0">Noah Michael</h5>
-                                    <small>Designer</small>
-                                </div>
-                            </div>
-                        </div>
+                        <img class="img-fluid rounded w-100" src="img/team-1.jpg" alt="">
+                    </div>
+                    <div class="px-4 py-3">
+                        <h5 class="fw-bold m-0">Jhon Doe</h5>
+                        <small>CEO</small>
                     </div>
                 </div>
             </div>
-            <!-- Team End -->
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="team-item">
+                    <div class="d-flex">
+                        <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
+                            style="width: 75px;">
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-twitter"></i></a>
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-instagram"></i></a>
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-linkedin-in"></i></a>
+                        </div>
+                        <img class="img-fluid rounded w-100" src="img/team-2.jpg" alt="">
+                    </div>
+                    <div class="px-4 py-3">
+                        <h5 class="fw-bold m-0">Emma William</h5>
+                        <small>Manager</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+                <div class="team-item">
+                    <div class="d-flex">
+                        <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
+                            style="width: 75px;">
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-twitter"></i></a>
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-instagram"></i></a>
+                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    class="fab fa-linkedin-in"></i></a>
+                        </div>
+                        <img class="img-fluid rounded w-100" src="img/team-3.jpg" alt="">
+                    </div>
+                    <div class="px-4 py-3">
+                        <h5 class="fw-bold m-0">Noah Michael</h5>
+                        <small>Designer</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Team End -->
 
             <!-- Footer Start -->
                  <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn circle-animationn triangle-animationn" data-wow-delay="0.1s">                <div class="container py-5 px-lg-5">
