--- a/customer.html
+++ b/customer.html
@@ -271,6 +271,7 @@
                             <a class="btn btn-link" href="">Privacy Policy</a>
                             <a class="btn btn-link" href="">Terms & Condition</a>
                         -->
+                        <a class="btn btn-link" href="">Career</a>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-white mb-4">Visitors</h5>
