--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -13,7 +13,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
     <link rel="stylesheet" href="./assets/css/theme.css">
     <link rel="stylesheet" href="./assets/css/loopple/loopple.css">
-
+    <!-- NAVBAR Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <style>
         .box {
             display: none;
@@ -22,15 +31,17 @@
         .btnChangeCard {
             background-color: white;
             border: 0;
-            border-bottom: 3px solid black;
-            border-radius: 2px;
-            padding: 0.2rem;
+            border-left: 1px solid rgba(106, 103, 103, 0.704);
+            padding: 0.5rem 1rem 0.5rem 1rem;
+            margin-left: 10px;
         }
-
         .btnChangeCard:hover {
-            font-size: 1rem;
-            transition: 0.2s;
-            color: #8cc5de;
+            letter-spacing: 0.2rem;
+            transition: 0.3s;
+            color: #ffffff;
+            background-color: black;
+            border-radius: 20px;
+            border-left: 1px solid rgba(106, 103, 103, 0.704);
         }
 
         .bg_colour {
@@ -44,15 +55,16 @@
             margin-left: 1rem;
             padding: 1rem;
         }
-
-        .stage {
-            margin: 0 0 0 0;
+        .navbar_css{
+            border-radius: 20px;
+            background-color: white;
+            margin: 1rem 2rem 2rem 2rem;
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
         $(document).ready(function () {
-            $('input[type="button"]').click(function () {
+            $('input[type="reset"').click(function () {
                 var inputValue = $(this).attr("value");
                 var targetBox = $("." + inputValue);
                 $(".box").not(targetBox).hide();
@@ -68,122 +80,55 @@
 
 
 
-
-    <nav class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start position-absolute ms-3 bg-white"
-        id="sidenav-main">
-        <div class="sidenav-header">
-            <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute right-0 top-0 d-none d-xl-none"
-                aria-hidden="true" id="iconSidenav"></i>
-            <a class="navbar-brand m-0" href="javascript:;">
-                <img src="../../img/Q-removebg-preview.png" class="navbar-brand-img h-100" alt="...">
-                <span class="ms-1 font-weight-bold">Q Startups</span>
-            </a>
-        </div>
-        <hr class="horizontal dark mt-0">
-        <div class="collapse navbar-collapse  w-auto" id="sidenav-collapse-main">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link  active" href="javascript:;">
-
-                        <input class="btnChangeCard" type="button" name="colorRadio" value="Dashboard">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link  " href="javascript:;">
-
-                        <input class="btnChangeCard" type="button" name="colorRadio" value="Inbox">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link  " href="javascript:;">
-
-                        <input class="btnChangeCard" type="button" name="colorRadio" value="Settings">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link  " href="javascript:;">
-
-                        <input class="btnChangeCard" type="button" name="colorRadio" value="AddDocuments">
-                    </a>
-                </li>
-                <li class="nav-item mt-3">
-                    <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account pages</h6>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link  " href="javascript:;">
-
-                        <input class="btnChangeCard" type="button" name="colorRadio" value="Services">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link  " href="javascript:;">
-
-                        <input class="btnChangeCard" type="button" name="colorRadio" value="ScheduleMeeting">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link  " href="javascript:;">
-
-                        <input class="btnChangeCard" type="button" name="colorRadio" value="MentorList">
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="sidenav-footer mx-3 mt-3 pt-3">
-            <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
-                <div class="full-background"
-                    style="background-image: url(https://demos.creative-tim.com/soft-ui-dashboard/assets/img/curved-images/white-curved.jpeg)">
-                </div>
-                <div class="card-body text-left p-3 w-100">
-                    <div
-                        class="icon icon-shape icon-sm bg-white shadow text-center mb-3 d-flex align-items-center justify-content-center border-radius-md">
-                        <i class="ni ni-diamond text-dark text-gradient text-lg top-0" aria-hidden="true"
-                            id="sidenavCardIcon"></i>
-                    </div>
-                    <div class="docs-info">
-                        <h6 class="text-white up mb-0">Need help?</h6>
-                        <p class="text-xs font-weight-bold">Send us a Message</p>
-                        <input class="btn btn-white btn-sm w-100 mb-0" type="button" value="Message">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <div class="main-content" id="panel">
-        <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 mt-3 shadow-none border-radius-xl bg-transparent"
-            id="navbarTop">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="" rel="tooltip" data-placement="bottom" target="_blank">
-                    Startup Name
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
-                    aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navigation">
-                    <ul class="navbar-nav navbar-nav-hover ms-auto">
-                        <div class="row">
-
-                            <div class="col-auto">
-                                <div class="bg-white border-radius-lg d-flex me-2">
-                                    <button class="btn bg-gradient-primary my-1 me-1">Logout</button>
-                                </div>
-                            </div>
-                        </div>
-                    </ul>
-                </div>
+    <div class="navbar_css">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="../../index.html">Q Startups</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item ">
+                        <input class="btnChangeCard" type="reset" name="colorRadio" value="Dashboard">
+                    </li>
+                    <li class="nav-item ">
+                        <input class="btnChangeCard" type="reset" name="colorRadio" value="Inbox">
+                    </li>
+                    <li class="nav-item">
+                        <input class="btnChangeCard" type="reset" name="colorRadio" value="Settings">
+                    </li>
+                    <li class="nav-item">
+                        <input class="btnChangeCard" type="reset" name="colorRadio" value="AddDocuments">
+                    </li>
+                    <li class="nav-item">
+                        <input class="btnChangeCard" type="reset" name="colorRadio" value="Services">
+                    </li>
+                    <li class="nav-item">
+                        <input class="btnChangeCard" type="reset" name="colorRadio" value="ScheduleMeeting">
+                    </li>
+                    <li class="nav-item">
+                        <input class="btnChangeCard" type="reset" name="colorRadio" value="MentorList">
+                    </li>
+                    <li class="nav-item">
+                        <input class="btnChangeCard" type="button" name="colorRadio" value="Logout">
+                            <i class="fa fa-sign-out" aria-hidden="true"></i>
+                    </li>
+                </ul>
             </div>
         </nav>
-        <hr>
+    </div>
+    <div class="main-content" id="panel">
         <div class="container-fluid pt-3">
             <!--------------------------- Dashboard BOX -------------------------------------->
             <div class="card h-100 Dashboard box">
                 <div class="card-header pb-0 p-3">
-                    <div class="row"> 
+                    <div class="row">
                         <div class="col-md-8 d-flex align-items-center">
                             <h6 class="mb-0">Startup Information</h6>
                         </div>
-                        
                     </div>
                 </div>
                 <div class="card-body p-3">
@@ -546,7 +491,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="button" class="btn bg-gradient-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="reset" class="btn bg-gradient-secondary" data-bs-dismiss="modal">Cancel</button>
                         <button type="button" class="btn bg-gradient-primary">Save changes</button>
 
                     </form>
@@ -751,7 +696,7 @@
                             </select>
                         </div">
                         <br>
-                        <button type="button" class="btn bg-gradient-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="reset" class="btn bg-gradient-secondary" data-bs-dismiss="modal">Cancel</button>
                         <button type="button" class="btn bg-gradient-primary">Save changes</button>
                     </form>
                 </div>
